# metametameta

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .pylintrc_tests  404.html  AGENTS.md  CHANGELOG.md  Justfile  Makefile  README.md  SECURITY.md  SOURCE.md  basic_help.sh  basic_test.sh  example.toml  example2.toml  go.py  index.html  junit.xml  mkdocs.yml  private_dictionary.txt  pyproject.toml  pyproject.toml.org  requirements.txt  run-pyenv-tox.sh  search.html  setup.cfg  sitemap.xml  tox.ini
.github/workflows/: build.yml  docs.yml  publish.yml  publish_to_pypi.yml  release.yml  tox.yml  zizmor.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
KILO_ROAD_MAP/: index.html
MAINTENANCE/: index.html
PRERELEASE/: index.html
TODO/: index.html
bug_reports/: jiggle-version-fixture-conflict.md
docs/: CHANGELOG.md  CONTRIBUTING.md  KILO_ROAD_MAP.md  MAINTENANCE.md  PRERELEASE.md  TODO.md  contributing.md  index.md  installation.md  requirements.txt  usage.md
docs/metametameta/: autodetect.html  filesystem.html  find.html  from_importlib.html  from_pep621.html  from_poetry.html  from_setup_cfg.html  from_setup_py.html  general.html  index.html  known.html
docs/metametameta/utils/: cli_suggestions.html
example/: __about_cfg__.py  __about_importlib__.py  __about_importlib_for_mmm__.py  __about_pep621_2__.py  __about_pep621__.py
installation/: index.html
metametameta/: __about__.py  __init__.py  __main__.py  autodetect.py  filesystem.html  filesystem.py  find.py  find_it.html  find_it.py  from_conda_meta.py  from_importlib.py  from_pep621.py  from_poetry.py  from_requirements_txt.py  from_setup_cfg.py  from_setup_py.py  general.html  general.py  logging_config.html  logging_config.py  validate_sync.html  validate_sync.py
metametameta/gui/: __init__.py  app.py
metametameta/utils/: __init__.py  cli_suggestions.py  index.html
scripts/: basic_checks.sh  basic_help.sh  bump_patch_version.py  global_variables.sh  make_prompt.sh  make_source.sh  mock_ci_variables.sh  prerelease_version_check.py  pytest.sh
search/: search_index.json
spec/: bug.md  how_to_tkinter.md
test_project/: __about__.py
tests/: assertion_tools.py  test_coverage_gaps.py  test_dumb_user_tricks.py  test_filesystem_new.py  test_from_cfg.py  test_from_importlib.py  test_from_poetry.py  test_from_poetry_alt_folder.py  test_generated_about_quality.py  test_gui_app.py  test_hypothesis.py  test_more.py  test_setup_py.py
tests/test_bot/example/: __about__.py
tests/test_bot/test_01/: __about__.py  test_autodetect.py  test_filesystem.py  test_find.py  test_find_it.py  test_from_conda_meta.py  test_from_pep621.py  test_from_poetry.py  test_from_requirements_txt.py  test_from_setup_cfg.py  test_general.py  test_validate_sync.py
tests/test_bot/test_01/my_project/: __about__.py
tests/test_bot/test_01/test_project/: __about__.py
tests/test_human/: test_filesystem.py  test_from_cfg.py  test_from_importlib.py  test_from_pep621.py  test_from_poetry_alt_folder.py  test_general.py
usage/: index.html
