[project]
name = "metametameta"
version = "0.1.5"
description = "Generate __about__.py with dunder meta."
authors = [
    {name = "Matthew Martin", email = "matthewdeanmartin@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["packaging", "metadata", ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "rich_argparse>=1.7.1",
    "toml>=0.10.2",
    "colorlog>=6.9.0",
    "totalhelp"
]

[project.urls]
"Bug Tracker" = "https://github.com/matthewdeanmartin/metametameta/issues"
"Change Log" = "https://github.com/matthewdeanmartin/metametameta/blob/main/CHANGELOG.md"

[project.scripts]
metametameta = 'metametameta.__main__:main'
mmm = 'metametameta.__main__:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "metametameta/**/*.py",
    "metametameta/py.typed",
    "/README.md", "LICENSE",
]

exclude = [
]

[tool.hatch.build.targets.wheel]
packages = ["metametameta"]
include = [
    "metametameta/**/*.py",
    "metametameta/py.typed",
    "/README.md", "LICENSE",
]


[dependency-groups]
dev = [
    "bitrab",
    "git2md; python_version >= '3.12'",
    "mkdocstrings",
    "pyclean; python_version >= '3.12'",
    "strip-docs>=1.0; python_version >= '3.12'",
    "gha-update; python_version >= '3.12'",
    "mkdocstrings[python]",
    "mkdocs; python_version >= '3.12'",
    "mdformat",
    "detect-test-pollution",
    # plugin finder
    "packaging; python_version >= '3.8'",
    "requests; python_version >= '3.8'",
    "tabulate[widechars]; python_version >= '3.8'",
    "tqdm; python_version >= '3.8'",
    "requests-cache; python_version >= '3.8'",
    "platformdirs; python_version >= '3.8'",

    # mpy
    "mypy; python_version >= '3.8'",
    "types-toml; python_version >= '3.8'",

    # reports
    "jinja2; python_version >= '3.8'",
    "bug-trail-core>=3.1.0; python_version >= '3.9'",
    # build
    "vermin; python_version >= '3.8'",
    "metametameta>=0.1.3; python_version >= '3.9'",
    "hatchling; python_version >= '3.8'",
    "ruff>=0.12.0; python_version >= '3.8'",
    "pylint; python_version >= '3.8'",

    # testing tools
    "pytest; python_version >= '3.8'",
    "pytest-cov; python_version >= '3.8'",
    "pytest-xdist>=3.5.0; python_version >= '3.8'",
    "pytest-randomly>=3.15.0; python_version >= '3.8'",
    "pytest-sugar>=0.9.7; python_version >= '3.8'",
    "pytest-mock; python_version >= '3.8'",
    "pytest-unused-fixtures; python_version >= '3.10'",
    "hypothesis[cli]; python_version >= '3.8'",
    "detect-test-pollution",
    "pytest-timeout>=2.4.0",

    # docs
    "interrogate>=1.5.0; python_version >= '3.8'",
    "pydoctest==0.2.1; python_version >= '3.8'",
    "pdoc3>=0.5.0; python_version >= '3.8'",
    "mdformat>=0.5.0; python_version >= '3.8'",
    "linkcheckmd>=1.4.0; python_version >= '3.8'",
    "codespell>=2.2.6; python_version >= '3.8'",
    "pyenchant>=3.2.2; python_version >= '3.8'",

# more testing (optional)
# pytest-snapshot = { version = ">=0.9.0", python = ">=3.9" }
# pytest-asyncio = { version = ">=0.23.2", python = ">=3.9" }
# anyio = { version = ">=4.2.0", python = ">=3.9" }
# trio = { version = ">=0.23.2", python = ">=3.9" }

# contract (optional)
# griffe = { version = ">=0.38.1", python = ">=3.9" }


]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test",
    "tests"
]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]
# don't know how to do this in toml
#addopts = "--strict-markers"
#markers =
#	slow: marks tests as slow (deselect with '-m "not slow"')
#	fast: marks tests as fast (deselect with '-m "not fast"')


[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["dedlin"]
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 1000
# Assume Python 3.10.
target-version = "py310"


[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F",
    "D", # docs
    "UP", # pyupgrade
    "B", # bugbear
]
ignore = [
    "D301", # messes with doctests
    "E722",
    # only track structural problems with docstrings, not whitespace, nor missing
    "D200", "D212", "D415", "D411", "D205", "D102", "D103", "D100", "D107", "D101", "D104", "D105",
    "UP007"
]

# Exclude a variety of commonly ignored directories.
exclude = [
    "dead_code",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = { }

## Allow unused variables when underscore-prefixed.
#dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"



[tool.ruff.lint.pydocstyle]
convention = "google"



[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]


[tool.cli-tools]
make = {name = "make", version = ">=3.81", schema = "semver", tags = ["build"]}
python = {name = "python", version = ">=3.11.1", schema = "semver", tags = ["build"]}


[tool.strict-build-script]
minimum_test_coverage = 60
